--- a/fichedevoeux/pom.xml
+++ b/fichedevoeux/pom.xml
@@ -49,6 +49,13 @@
         	<groupId>org.xerial</groupId>
         	<artifactId>sqlite-jdbc</artifactId>
     	</dependency>
+    	
+    	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
