--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Configuration de SQLite
 spring.application.name=fichedevoeux
-spring.datasource.url=jdbc:sqlite:fichedb.db
+spring.datasource.url=jdbc:sqlite:db/fichedb.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
