running the project in portal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:sqlite:db/fichedb.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.username=
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
+spring.jpa.database-platform=com.departement.fichedevoeux.config.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
