--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,14 @@
             <scope>runtime</scope>
         </dependency>
 
+        
+        <dependency>
+    <groupId>org.hibernate.orm</groupId>
+    <artifactId>hibernate-core</artifactId>
+  
+</dependency>
 
+        
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
