messagerie test complet!!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.com.departement=DEBUG
 logging.level.org.springframework=DEBUG
 spring.main.allow-bean-definition-overriding=true
+logging.level.com.departement.fichedevoeux=DEBUG
+
