--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,6 @@
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-data-jpa</artifactId>
     	</dependency>
-
-		<dependency>
-        	<groupId>org.xerial</groupId>
-        	<artifactId>sqlite-jdbc</artifactId>
-    	</dependency>
     	
     	<dependency>
     	    <groupId>org.springframework.security</groupId>
@@ -62,6 +57,11 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 		</dependency>
 		
 		<dependency>
@@ -85,19 +85,11 @@
 			<groupId>jakarta.validation</groupId>
 			<artifactId>jakarta.validation-api</artifactId>
 		</dependency>
-		
-		<dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-
         
         <dependency>
-    <groupId>org.hibernate.orm</groupId>
-    <artifactId>hibernate-core</artifactId>
-  
-</dependency>
+    		<groupId>org.hibernate.orm</groupId>
+    		<artifactId>hibernate-core</artifactId>
+		</dependency>
 
         
 		<dependency>
