--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/fichedb
+spring.datasource.username=postgres
+spring.datasource.password=amira
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
-logging.level.com.departement=DEBUG
-logging.level.org.springframework=DEBUG
-spring.main.allow-bean-definition-overriding=true
-logging.level.com.departement.fichedevoeux=DEBUG
-
