--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/fichedb
 spring.datasource.username=postgres
 spring.datasource.password=amira
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web.bind=DEBUG
+
