--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.show-sql=true
 spring.sql.init.mode=always
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web.bind=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.http.converter.json=TRACE
 
