--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/fichedb
-spring.datasource.username=postgres
-spring.datasource.password=amira
+spring.datasource.url=jdbc:postgresql://dpg-d0pn366uk2gs739rffe0-a:5432/fichedb
+spring.datasource.username=fichedb_user
+spring.datasource.password=wKguFrnHMU1Hirdzl0V4YYSGtirRPXAL
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
