--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:postgresql://dpg-d0pn366uk2gs739rffe0-a:5432/fichedb
+spring.datasource.url=jdbc:postgresql://dpg-d0pn366uk2gs739rffe0-a.oregon-postgres.render.com:5432/fichedb
 spring.datasource.username=fichedb_user
 spring.datasource.password=wKguFrnHMU1Hirdzl0V4YYSGtirRPXAL
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.sql.init.mode=always
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web.bind=DEBUG
